# ardata-exam-backend

./: Cargo.toml  Dockerfile  README.md
src/: error.rs  main.rs
src/web/: handlers.rs  routes.rs
tests/: quick_dev.rs
