[package]
name = "ardata-exam-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
ethers = {version = "2"}
serde_json = "1"
axum = "0.7"
tower-http = {version = "0.5", features = ["fs"]}
dotenv = "0.15"
url = "2.5"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
